fixed spacing and worked on mobile display

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -40,13 +40,21 @@ main {
 
 .contact {
     text-align: left;
-    font-family: "Karla", sans-serif;
-    margin-left: 0;
+    font-family: sans-serif;
+    margin-left: 1em;
+    // padding-left: 2em
+}
+
+.map {
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 2em;
 }
 
 .mapImg {
-    width: 85%;
-    height: 95%;
+    width: 90%;
+    height: auto;
+    object-fit: cover;
 }
 
 .county {
@@ -54,24 +62,26 @@ main {
 }
 
 .city {
-    font-size: 36px;
+    font-size: 110%;
     margin-bottom: 0;
     align-items: flex-end;
-    margin-top: 0;
+    margin-top: -15px;
+    display: inline;
 }
 
 .phone {
     margin-bottom: 0.6em;
-    font-size: 36px;
-    margin-top: 0;
+
+    font-size: 110%;
+    margin-top: 0.6em;
 }
 
 .address {
-    font-size: 20px;
+    font-size: 65%;
 }
 
 .hours {
-    font-size: 16px;
+    font-size: 90%;
 }
 
 .city a {
@@ -79,12 +89,197 @@ main {
 }
 
 .app {
-    width: 44px;
-    border-radius: 15px;
+    width: 45px;
+    border-radius: 30%;
     align-self: flex-start;
     text-decoration: none;
 }
 
 .app:first-child {
-    margin-left: 10px;
+    margin-left: 20px;
+}
+
+@media screen and (max-width: 1350px) {
+    .city {
+        font-size: 95%;
+    }
+    .county {
+        font-size: 13px;
+    }
+
+    .contact {
+        margin-left: 0;
+    }
+    .mapImg {
+        width: 90%;
+    }
+
+    .map {
+        padding-left: 0em;
+    }
+    .phone {
+        margin-bottom: 0.6em;
+        font-size: 95%;
+        margin-top: 0.6em;
+    }
+
+    .address {
+        font-size: 50%;
+    }
+    .hours {
+        font-size: 75%;
+    }
+    .app {
+        width: 40px;
+    }
+}
+
+@media screen and (max-width: 1070px) {
+    .city {
+        font-size: 85%;
+        margin-top: -8px;
+    }
+    .county {
+        font-size: 12px;
+    }
+    .phone {
+        margin-bottom: 0.6em;
+
+        font-size: 85%;
+        margin-top: 0.6em;
+    }
+
+    .map {
+        padding-left: 0em;
+    }
+
+    .address {
+        font-size: 40%;
+    }
+    .hours {
+        font-size: 65%;
+    }
+    .app {
+        width: 30px;
+        border-radius: 30%;
+    }
+}
+
+@media screen and (max-width: 950px) {
+    .city {
+        font-size: 75%;
+        margin-top: -5px;
+    }
+    .map {
+        padding-left: 0em;
+    }
+    .mapImg {
+        width: 95%;
+    }
+    .county {
+        font-size: 10px;
+    }
+    .phone {
+        margin-bottom: 0.6em;
+        font-size: 75%;
+        margin-top: 0.6em;
+    }
+
+    .address {
+        font-size: 30%;
+    }
+    .hours {
+        font-size: 55%;
+    }
+    .app {
+        width: 25px;
+        border-radius: 30%;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .mapcontact {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+        justify-items: center;
+        margin-top: 0;
+        margin-left: 0;
+    }
+    .map {
+        grid-row: 2/3;
+        padding-right: 0;
+        grid-column: 1 / 3;
+    }
+    .mapImg {
+        width: 90%;
+    }
+    .location {
+        display: grid;
+        align-items: center;
+    }
+
+    .map {
+        display: flex;
+        background-color: aqua;
+        justify-content: center;
+    }
+    .mapImg {
+        width: 80%;
+        height: 100%;
+        object-fit: cover;
+    }
+    .contact {
+        display: grid;
+        grid-template-columns: 0.1fr 1fr 0.1fr;
+        grid-template-rows: auto;
+        width: 100%;
+        margin-top: 3em;
+        text-align: center;
+    }
+    .city {
+        grid-row: 2 / 3;
+        grid-column: 2 / 3;
+        margin: 0;
+    }
+    .county {
+        grid-row: 0 / 1;
+        grid-column: 2 / 3;
+        font-size: 10px;
+        margin-bottom: 0;
+    }
+    .phone {
+        margin-bottom: 0;
+        font-size: 60%;
+        margin-top: 0em;
+        grid-column: 2 / 3;
+        grid-row: 3 /4;
+    }
+
+    .address {
+        font-size: 40%;
+        grid-column: 2 / 3;
+        grid-row: 4 / 5;
+        margin: 0.6em;
+    }
+    .hours {
+        display: flex;
+        font-size: 55%;
+        grid-column: 2 / 3;
+        justify-content: center;
+        grid-row: 5 /6;
+        margin: 0;
+    }
+    .hoursText {
+        text-align: right;
+        margin-top: 0;
+    }
+    .app {
+        width: 12%;
+    }
+    .apps {
+        grid-column: 2 / 3;
+        grid-row: 6 /7;
+        margin-bottom: 0.5em;
+    }
 }
